# notes

./: #relics.xml  #venting.xml  .envrc  .gitattributes  .gitignore  .watchmanconfig  404.html  Alculator.html  Aliens and Calendars.html  Archive.html  CNAME  COVID-19 Tracker.html  Computing.html  Dictionary.html  Do Things, Tell People.html  Etymology.html  Firefox Photon.html  Folklore.html  GECOS.html  Ghidhra HiDPI.html  Git Subdirectory Branch.html  Keychron Fn Keys.html  Language.html  Machine Learning.html  Makefile  Mistakes.html  Notes.html  Pocket Veto.html  Problems.html  Projects.html  README.md  Stable Diffusion.html  Superstitious Encoding.html  The Cab Ride I'll Never Forget.html  The Case of the 500-Mile Email.html  The Crawford Principles.html  The Rise of "Worse is Better".html  Xfce Screentearing.html  blog.xml  build.sh  (+32 more)
()/: index.html
.obsidian/: workspace.json
.trash/: index.html
10-rules-of-internet/: index.html
80-columns/: index.html
Alculator/: index.html
Aliens and Calendars/: index.html
Aliens_and_Calendars/: index.html
Archive/: index.html
COVID-19 Tracker/: index.html
COVID-19_Tracker/: index.html
Computing/: index.html
Dictionary/: index.html
Do Things, Tell People/: index.html
Do_Things,_Tell_People/: index.html
Etymology/: index.html
Firefox Photon/: index.html
Firefox_Photon/: index.html
Folklore/: index.html
GECOS/: index.html
Ghidhra HiDPI/: index.html
Ghidhra_HiDPI/: index.html
Git Subdirectory Branch/: index.html
Git_Subdirectory_Branch/: index.html
Infinity/: index.html
c/: index.html
(+1737 files in other folders)
