[project]
name = "ochrs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.9",
    "markdown-checklist>=0.4.4",
    "pygments>=2.19.2",
    "pymdown-extensions>=10.16.1",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
]
